force-app/main/default/objects/Commission_Draw__c/Commission_Draw__c.object-meta.xml
<CustomObject>
    <description>Tracks commission draws, advances, paybacks, and clawbacks for sales representatives.</description>
    <label>Commission Draw</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Commission Draw Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Draws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>