force-app/main/default/objects/Commission_Draw__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Commission Draws</relationshipLabel>
    <relationshipName>Commission_Draws</relationshipName>
    <type>Lookup</type>
</CustomField>