force-app/main/default/objects/Commission_Draw__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draw</fullName><default>false</default><label>Draw</label></value>
            <value><fullName>Advance</fullName><default>false</default><label>Advance</label></value>
            <value><fullName>Payback</fullName><default>false</default><label>Payback</label></value>
            <value><fullName>Clawback</fullName><default>false</default><label>Clawback</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>